--- a/Spot.Srtl/Spot.Srtl.csproj
+++ b/Spot.Srtl/Spot.Srtl.csproj
@@ -54,8 +54,9 @@
     <Compile Include="Input.cs" />
     <Compile Include="LexicalAnalyzer.cs" />
     <Compile Include="Parser.cs" />
-    <Compile Include="ParsingResult.cs" />
+    <Compile Include="TestCollection.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SrtLReader.cs" />
     <Compile Include="String.cs" />
     <Compile Include="Test.cs" />
     <Compile Include="TokenType.cs" />
