Fixes the enormous ram usage
The fuzzy test generation doesn't exibit the enormous ram useage
anymore, however it takes a long time to generate all the tests.

--- a/Spot.Ebnf.Tests/Spot.Ebnf.Tests.csproj
+++ b/Spot.Ebnf.Tests/Spot.Ebnf.Tests.csproj
@@ -54,6 +54,7 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FuzzAssert.cs" />
     <Compile Include="FuzzyTestGeneratorTests.cs" />
     <Compile Include="LeftRecursionCheckerTests.cs" />
     <Compile Include="LexicalAnalyzerTests.cs" />
