--- a/Spot.Srtl/Spot.Srtl.csproj
+++ b/Spot.Srtl/Spot.Srtl.csproj
@@ -55,6 +55,7 @@
     <Compile Include="Input.cs" />
     <Compile Include="LexicalAnalyzer.cs" />
     <Compile Include="Parser.cs" />
+    <Compile Include="StartingPoint.cs" />
     <Compile Include="TestCollection.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SrtLReader.cs" />
