--- a/Spot.SrtL.Tests/Spot.SrtL.Tests.csproj
+++ b/Spot.SrtL.Tests/Spot.SrtL.Tests.csproj
@@ -48,8 +48,8 @@
       <Private>False</Private>
     </Reference>
     <Reference Include="Pote.Text, Version=0.7.0.2, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Pote.Text.0.7.2\lib\net45\Pote.Text.dll</HintPath>
-      <Private>False</Private>
+      <HintPath>..\packages\Pote.Text.0.7.4\lib\net45\Pote.Text.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
