--- a/Spot.Srtl/Spot.Srtl.csproj
+++ b/Spot.Srtl/Spot.Srtl.csproj
@@ -53,10 +53,12 @@
     <Compile Include="ConcatenatedString.cs" />
     <Compile Include="Description.cs" />
     <Compile Include="ExcludingAllRules.cs" />
+    <Compile Include="IncludedRules.cs" />
     <Compile Include="Input.cs" />
     <Compile Include="LexicalAnalyzer.cs" />
     <Compile Include="Parser.cs" />
     <Compile Include="StartingPoint.cs" />
+    <Compile Include="StringList.cs" />
     <Compile Include="TestCollection.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SrtLReader.cs" />
