--- a/Spot/Spot.csproj
+++ b/Spot/Spot.csproj
@@ -32,16 +32,12 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Newtonsoft.Json, Version=8.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>..\packages\Newtonsoft.Json.8.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
     <Reference Include="Pote, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\Pote.1.0.1\lib\net45\Pote.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="Pote.CommandLine, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Pote.CommandLine.0.1.0\lib\net45\Pote.CommandLine.dll</HintPath>
+    <Reference Include="Pote.CommandLine, Version=0.1.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Pote.CommandLine.0.1.0-alpha\lib\net45\Pote.CommandLine.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
