--- a/Spot/packages.config
+++ b/Spot/packages.config
@@ -1,6 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Newtonsoft.Json" version="8.0.3" targetFramework="net45" />
   <package id="Pote" version="1.0.1" targetFramework="net45" />
-  <package id="Pote.CommandLine" version="0.1.0" targetFramework="net45" />
+  <package id="Pote.CommandLine" version="0.1.0-alpha" targetFramework="net45" />
 </packages>
