--- a/Spot.Ebnf.Tests/Spot.Ebnf.Tests.csproj
+++ b/Spot.Ebnf.Tests/Spot.Ebnf.Tests.csproj
@@ -60,6 +60,7 @@
     <Compile Include="LexicalAnalyzerTests.cs" />
     <Compile Include="ParserTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RandomPassTests.cs" />
     <Compile Include="SyntaxValidatorTests.cs" />
     <Compile Include="TokenBuilder.cs" />
     <Compile Include="Unicode\UnicodeSequenceGeneratorTests.cs" />
