--- a/Spot/Spot.csproj
+++ b/Spot/Spot.csproj
@@ -47,6 +47,7 @@
     <Compile Include="FuzzVerb.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RandomVerb.cs" />
     <Compile Include="TestVerb.cs" />
     <Compile Include="ThirdParty.cs" />
   </ItemGroup>
