--- a/Spot.SrtL.Tests/Spot.SrtL.Tests.csproj
+++ b/Spot.SrtL.Tests/Spot.SrtL.Tests.csproj
@@ -55,15 +55,21 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Fuzzer.cs" />
     <Compile Include="LexicalAnalyzerTests.cs" />
     <Compile Include="ParserTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StringExtensions.cs" />
     <Compile Include="TokenBuilder.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Spot.Ebnf\Spot.Ebnf.csproj">
+      <Project>{0d475c39-ba44-4587-8e44-b675a957d0d3}</Project>
+      <Name>Spot.Ebnf</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Spot.Srtl\Spot.SrtL.csproj">
       <Project>{9b208cfd-52ce-4436-ac52-3ce12694a375}</Project>
       <Name>Spot.SrtL</Name>
